# soui-ws

./: .gitmodules  CMakeLists.txt  README.md  build_openssl_x64.bat  build_openssl_x86.bat
ws/: CMakeLists.txt
ws/include/: ws-i.h
ws/src/: Connection.cpp  Connection.h  ws.cpp  wsClient.cpp  wsServer.cpp  wsServer.h  wsclient.h
ws/test/: ClientTest.cpp  ServerTest.cpp
